💻 Developed our services section mobile and large screens

--- a/index.html
+++ b/index.html
@@ -6,9 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tasty Food</title>
     <link rel="stylesheet" href="styles.css" />
+    <link
+      href="https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <main>
+      <!-- Hero Section start -->
       <section class="hero-container">
         <article class="hero-description">
           <h1 class="hero-description__tittle">
@@ -20,7 +25,9 @@
             repellat distinctio illo enim porro voluptates iste error corporis
             perferendis.
           </p>
-          <button class="primary-button">Book A Table</button>
+          <button class="primary-button">
+            Book A Table <i class="bx bx-right-arrow-alt"></i>
+          </button>
         </article>
         <img
           class="hero-plate-container__img"
@@ -28,6 +35,40 @@
           alt="Hero plate"
         />
       </section>
+      <!-- Hero Section end -->
+
+      <!-- Our services section start -->
+      <section class="services-container">
+        <h2 class="services__tittle">Our Services</h2>
+        <figure class="services-grid-container">
+          <img
+            src="https://i.postimg.cc/k5qHRc5H/video.png"
+            alt="Video plate"
+            class="services__video"
+          /><img
+            src="https://i.postimg.cc/qR0pRyfB/dish1.png
+          "
+            alt="dish 1"
+            class="services__dish"
+          /><img
+            src="https://i.postimg.cc/Wp5sNd5j/dish2.png
+          "
+            alt="dish2"
+            class="services__dish"
+          /><img
+            src="https://i.postimg.cc/hPwgmHF5/dish3.png
+          "
+            alt="dish3"
+            class="services__dish"
+          /><img
+            src="https://i.postimg.cc/MG08hHnC/dish4.png
+          "
+            alt="dish4"
+            class="services__dish"
+          />
+        </figure>
+      </section>
+      <!-- Our services section end -->
     </main>
   </body>
 </html>
