💅 Developed responsive Home Menu section

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </article>
         <img
           class="hero-plate-container__img"
-          src="https://i.postimg.cc/zD21m9fG/hero.png"
+          src="https://cssg-rid-basico.vercel.app/hero.png"
           alt="Hero plate"
         />
       </section>
@@ -42,7 +42,7 @@
         <h2 class="services__tittle">Our Services</h2>
         <figure class="services-grid-container">
           <img
-            src="https://i.postimg.cc/k5qHRc5H/video.png"
+            src="https://cssg-rid-basico.vercel.app/video.png"
             alt="Video plate"
             class="services__video"
           /><img
@@ -69,6 +69,35 @@
         </figure>
       </section>
       <!-- Our services section end -->
+
+      <!-- Home Menu Section start -->
+      <section class="home-menu-container">
+        <h2 class="services__tittle">Home Menu</h2>
+        <figure class="menu-grid-container">
+          <img
+            src="https://cssg-rid-basico.vercel.app/plate1.png"
+            alt="plate1"
+            class="plate"
+          /><img
+            src="https://cssg-rid-basico.vercel.app/plate2.png"
+            alt="plate2"
+            class="plate"
+          /><img
+            src="https://cssg-rid-basico.vercel.app/plate3.png"
+            alt="plate3"
+            class="plate"
+          /><img
+            src="https://cssg-rid-basico.vercel.app/plate4.png"
+            alt="plate4"
+            class="plate"
+          /><img
+            src="https://cssg-rid-basico.vercel.app/plate5.png"
+            alt="plate5"
+            class="plate"
+          />
+        </figure>
+      </section>
+      <!-- Home Menu Section end -->
     </main>
   </body>
 </html>
