--- a/index.html
+++ b/index.html
@@ -73,29 +73,49 @@
       <!-- Home Menu Section start -->
       <section class="home-menu-container">
         <h2 class="services__tittle">Home Menu</h2>
-        <figure class="menu-grid-container">
-          <img
-            src="https://cssg-rid-basico.vercel.app/plate1.png"
-            alt="plate1"
-            class="plate"
-          /><img
-            src="https://cssg-rid-basico.vercel.app/plate2.png"
-            alt="plate2"
-            class="plate"
-          /><img
-            src="https://cssg-rid-basico.vercel.app/plate3.png"
-            alt="plate3"
-            class="plate"
-          /><img
-            src="https://cssg-rid-basico.vercel.app/plate4.png"
-            alt="plate4"
-            class="plate"
-          /><img
-            src="https://cssg-rid-basico.vercel.app/plate5.png"
-            alt="plate5"
-            class="plate"
-          />
-        </figure>
+        <div class="menu-grid-container">
+          <figure class="menu-item-bg">
+            <i class="bx bxs-heart bxs-heart--fav"></i>
+            <img
+              src="https://cssg-rid-basico.vercel.app/plate1.png"
+              alt="plate1"
+              class="plate"
+            />
+          </figure>
+          <figure class="menu-item-bg">
+            <i class="bx bxs-heart"></i>
+            <img
+              src="https://cssg-rid-basico.vercel.app/plate2.png"
+              alt="plate2"
+              class="plate"
+            />
+          </figure>
+
+          <figure class="menu-item-bg">
+            <i class="bx bxs-heart bxs-heart--fav"></i>
+            <img
+              src="https://cssg-rid-basico.vercel.app/plate3.png"
+              alt="plate3"
+              class="plate"
+            />
+          </figure>
+          <figure class="menu-item-bg">
+            <i class="bx bxs-heart"></i>
+            <img
+              src="https://cssg-rid-basico.vercel.app/plate4.png"
+              alt="plate4"
+              class="plate"
+            />
+          </figure>
+          <figure class="menu-item-bg">
+            <i class="bx bxs-heart bxs-heart--fav"></i>
+            <img
+              src="https://cssg-rid-basico.vercel.app/plate5.png"
+              alt="plate5"
+              class="plate"
+            />
+          </figure>
+        </div>
       </section>
       <!-- Home Menu Section end -->
     </main>
