✨ Added interaction change heart icon's color when clicking it

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <h2 class="services__tittle">Home Menu</h2>
         <div class="menu-grid-container">
           <figure class="menu-item-bg">
-            <i class="bx bxs-heart bxs-heart--fav"></i>
+            <i class="bx bxs-heart"></i>
             <img
               src="https://cssg-rid-basico.vercel.app/plate1.png"
               alt="plate1"
@@ -92,7 +92,7 @@
           </figure>
 
           <figure class="menu-item-bg">
-            <i class="bx bxs-heart bxs-heart--fav"></i>
+            <i class="bx bxs-heart"></i>
             <img
               src="https://cssg-rid-basico.vercel.app/plate3.png"
               alt="plate3"
@@ -108,7 +108,7 @@
             />
           </figure>
           <figure class="menu-item-bg">
-            <i class="bx bxs-heart bxs-heart--fav"></i>
+            <i class="bx bxs-heart"></i>
             <img
               src="https://cssg-rid-basico.vercel.app/plate5.png"
               alt="plate5"
@@ -119,5 +119,6 @@
       </section>
       <!-- Home Menu Section end -->
     </main>
+    <script src="main.js"></script>
   </body>
 </html>
